# autocall_pricer

./: AWS_SETUP.md  CHECKLIST.md  DESIGN.md  README.md  pyproject.toml
autocall_pricer/: __init__.py  engine.py
autocall_pricer/market/: api_client.py  iv_solver.py  option_chain.py  rates.py  surface_builder.py  vol_surface.py
autocall_pricer/models/: local_vol.py
autocall_pricer/pde/: grid.py  operators.py  solver.py
autocall_pricer/products/: base.py  phoenix_autocall.py  stepdown_autocall.py  vanilla_autocall.py
examples/: build_vol_surface.py  price_vanilla_autocall.py
tests/: test_local_vol.py  test_pde_solver.py  test_products.py
