[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autocall_pricer"
version = "0.1.0"
description = "Autocallable structured product pricing engine (Dupire local vol + Crank-Nicolson PDE)"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "scipy>=1.12"]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["autocall_pricer*"]
